# dockaudit

./: .gitignore  CONTRIBUTING.md  README.md  dockaudit.py  pyproject.toml  test_dockaudit.py
examples/: bad.Dockerfile  good.Dockerfile
