[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dockaudit"
version = "1.0.0"
description = "Pure Python Dockerfile linter & security auditor. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kris Kimmerle"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
keywords = ["dockerfile", "linter", "docker", "security", "audit", "devops"]

[project.urls]
Homepage = "https://github.com/kriskimmerle/dockaudit"
Repository = "https://github.com/kriskimmerle/dockaudit"
Issues = "https://github.com/kriskimmerle/dockaudit/issues"

[project.scripts]
dockaudit = "dockaudit:main"
